--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"bootstrap": "5.0.1",
 		"bootstrap-icons": "^1.5.0",
 		"feather-icons": "^4.28.0",
+		"imagesloaded": "^5.0.0",
 		"is_js": "^0.9.0",
 		"isotope-layout": "^3.0.6",
 		"isotope-packery": "^2.0.1"
